[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compoundrank-local"
version = "0.2.0"
description = "GNINA-scored binding hypotheses with physical-validity filtering and uncertainty"
requires-python = ">=3.12"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.13",
  "gemmi>=0.7",
  "rdkit>=2024.3",
  "meeko>=0.6",
  "pdb2pqr>=3.6",
]

[project.scripts]
compoundrank = "compoundrank.cli:main"
compoundrank-ensemble = "compoundrank.structure_ensemble:main"
compoundrank-openmm-md = "compoundrank.openmm_md:main"

[project.optional-dependencies]
md = [
  "openmm>=8.5,<8.6",
]
md-cuda12 = [
  "openmm[cuda12]>=8.5,<8.6",
]

[tool.setuptools.packages.find]
include = ["compoundrank*"]

[tool.setuptools.package-data]
compoundrank = ["data/ramachandran/*"]
